# ClimRRGPT-beta

./: .gitignore  Dockerfile  README.md  docker-compose.yml  image.ipynb  pyproject.toml  requirements.txt  temp  temperature.ipynb  test.py
Beaverton_mitigation_policy/: checklist.txt  crossmodels.txt  data_dict.json  data_dict_manual.json  evaluation.csv  interaction.jsonl  misc.txt  plan.txt  session_state.pkl  threads.txt  tools.txt
Boston_risk/: crossmodels.txt  interaction.jsonl  misc.txt  plan.txt  session_state.pkl  threads.txt  tools.txt  user_profile.txt
Chicago_fire/: checklist.txt  crossmodels.txt  interaction.jsonl  misc.txt  plan.txt  session_state.pkl  threads.txt  tools.txt
Mora_county_mitigation/: checklist.txt  crossmodels.txt  interaction.jsonl  misc.txt  plan.txt  session_state.pkl  threads.txt  tools.txt
Sangre_De_Cristo_Mountains/: crossmodels.txt  interaction.jsonl  misc.txt  plan.txt  session_state.pkl  threads.txt  tools.txt  user_profile.txt
Virginia_forest/: interaction.jsonl  misc.txt  plan.txt  session_state.pkl  threads.txt  tools.txt  user_profile.txt
WUI_and_Water_Resources/: crossmodels.txt  interaction.jsonl  misc.txt  plan.txt  session_state.pkl  threads.txt  tools.txt  user_profile.txt
Water supply and unpaved roadways/: chat_history.docx  chat_history.txt  checklist.md  memory_0  memory_1  memory_2  memory_3  memory_4  memory_5  plan.md  profile.md  waterSupplyAndUnpavedRoadways_chat_history_MRA.docx
chat_history/: checklist.txt  crossmodels.txt  interaction.jsonl  plan.txt  session_state.pkl  threads.txt  tools.txt
prompt/: prompt.md  prompt.txt
src/: FWI.md  checklist.py  climRRChat.py  config.py  config.yml  fire_history.py  init.py  literature.py  memory.py  prompts.yml  streamlit.py  (+4 more)
(+123 files in other folders)
